GPencil: Crash on Draw mode with custom startup file #77003

Closed
opened 2020-05-23 21:40:31 +02:00 by Vaughan Ling · 29 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.90 (sub 3), branch: master, commit date: 2020-05-22 20:59, hash: 86fa8dc7f7
Worked: Blender 2.9 daily build from May 19th

Short description of error
crash on grease pencil draw mode

Exact steps for others to reproduce the error
Open attached file, Create Grease Pencil object, go to draw mode.

startup.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.90 (sub 3), branch: master, commit date: 2020-05-22 20:59, hash: `86fa8dc7f7` Worked: Blender 2.9 daily build from May 19th **Short description of error** crash on grease pencil draw mode **Exact steps for others to reproduce the error** Open attached file, Create Grease Pencil object, go to draw mode. [startup.blend](https://archive.blender.org/developer/F8549769/startup.blend)
Author

Added subscriber: @heavypoly

Added subscriber: @heavypoly
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
dupoxy self-assigned this 2020-05-24 07:38:22 +02:00
Contributor

I can redo the crash with the provided .blend
startup.crash.txt
System Information
Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits

I can redo the crash with the provided .blend [startup.crash.txt](https://archive.blender.org/developer/F8550361/startup.crash.txt) **System Information** Operating system: Darwin-17.7.0-x86_64-i386-64bit 64 Bits
Contributor

Sorry this is NOT resolved but I can not reopen it :(
So Sorry for the extra work here can someone reopen this report thanks.

Sorry this is NOT resolved but I can not reopen it :( So Sorry for the extra work here can someone reopen this report thanks.
Member

Changed status from 'Resolved' to: 'Needs Triage'

Changed status from 'Resolved' to: 'Needs Triage'
Antonio Vazquez changed title from Grease Pencil crash on Draw mode with custom startup file to GPencil: Crash on Draw mode with custom startup file 2020-05-24 07:53:47 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
dupoxy removed their assignment 2020-05-24 08:27:46 +02:00

This issue was referenced by 22462fed00

This issue was referenced by 22462fed000d7494522f7824ede7ff9f99d2bddf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2020-05-24 10:23:07 +02:00
Antonio Vazquez removed their assignment 2020-05-24 10:27:51 +02:00
dupoxy was assigned by Antonio Vazquez 2020-05-24 10:27:51 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

@heavypoly Not sure how you created this blend file, but it looks that it was created with some alpha version. I have fixed the problem, Also, I have fixed other issues with brushes in you file. Attached the fixed version.

startup_fixed.blend

@heavypoly Not sure how you created this blend file, but it looks that it was created with some alpha version. I have fixed the problem, Also, I have fixed other issues with brushes in you file. Attached the fixed version. [startup_fixed.blend](https://archive.blender.org/developer/F8550512/startup_fixed.blend)
dupoxy was unassigned by Antonio Vazquez 2020-05-24 10:28:52 +02:00
Antonio Vazquez self-assigned this 2020-05-24 10:28:52 +02:00
Author

It works! Thank you @antoniov !

It works! Thank you @antoniov !

Added subscriber: @Meru

Added subscriber: @Meru

The startup_fixed.blend crashes Templates. See this repository for a reference: https://github.com/notfood/Blender-Config-Heavypoly

I'm using the old startup.blend file that works, if you replace it with the startup_fixed.blend, Blender crashes with the included file.

blender.crash.txt

The startup_fixed.blend crashes Templates. See this repository for a reference: https://github.com/notfood/Blender-Config-Heavypoly I'm using the old startup.blend file that works, if you replace it with the startup_fixed.blend, Blender crashes with the included file. [blender.crash.txt](https://archive.blender.org/developer/F8588707/blender.crash.txt)

@Meru crashes what template? the templates in the github attached?

@Meru crashes what template? the templates in the github attached?

When you put it under the directory

scripts/startup/bl_app_templates_user/Heavypoly

And then, you launch the template as, new > Heavypoly

You'll crash.

A screenshot for reference:
image.png

When you put it under the directory ``` scripts/startup/bl_app_templates_user/Heavypoly ``` And then, you launch the template as, new > Heavypoly You'll crash. A screenshot for reference: ![image.png](https://archive.blender.org/developer/F8589463/image.png)

Any issues reproducing it?

I'm under Linux. Does it reproduce on Windows?

Any issues reproducing it? I'm under Linux. Does it reproduce on Windows?

@Meru I Cannot reproduce on Windows 10 using 2.83 official.

@Meru I Cannot reproduce on Windows 10 using 2.83 official.

I reproduced it on Windows 7 and Windows 10, using blender-2.90.0-c7b03fe9c07a-windows64.zip (June 17, 00:17:09)

Users followed this guide:

This is the crash file on Windows: blender.crash.txt

I was unable to reproduce it under Windows 2.83, it does reproduce under Linux 2.83.

I reproduced it on Windows 7 and Windows 10, using `blender-2.90.0-c7b03fe9c07a-windows64.zip` (June 17, 00:17:09) **Users followed this guide:** - Download latest build from https://builder.blender.org/download/ - Download https://dev-files.blender.org/file/download/enalvpihcadkrculmthq/PHID-FILE-ryho6dnxsp4b6wg7j5fd/startup_fixed.blend - Unzip Blender somewhere - Create the following folder `{Blender_install}\2.90\scripts\startup\bl_app_templates_system\Heavypoly` - Rename startup_fixed.blend to startup.blend, move it into the `Heavypoly` folder - Run Blender, try to create new file with the new template `Heavypoly` - Experience crash This is the crash file on Windows: [blender.crash.txt](https://archive.blender.org/developer/F8627085/blender.crash.txt) I was unable to reproduce it under Windows 2.83, it does reproduce under Linux 2.83.

Should I open a new issue with the template crash?

Should I open a new issue with the template crash?

@Meru I opened a task (#78001) but we were unable to reproduce it. Try this file No_crash_opening.blend

@Meru I opened a task (#78001) but we were unable to reproduce it. Try this file [No_crash_opening.blend](https://archive.blender.org/developer/F8633702/No_crash_opening.blend)

Yes, this file loads fine with no crash. Thank you.

Are there any steps I have to follow to fix the broken file? Because I may have to do so again.

Yes, this file loads fine with no crash. Thank you. Are there any steps I have to follow to fix the broken file? Because I may have to do so again.

I have another file that has the same issue. It crashes with the same crashlog on Linux and Windows 2.90

Can you detail the steps to fix them please? Resaving it doesn't seem to fix it. It used to work fine before as I used it a lot.

startup.blend

I have another file that has the same issue. It crashes with the same crashlog on Linux and Windows 2.90 Can you detail the steps to fix them please? Resaving it doesn't seem to fix it. It used to work fine before as I used it a lot. [startup.blend](https://archive.blender.org/developer/F8639950/startup.blend)

@Meru I can open your startup file, add a GPencil and draw, sculpt, vertex paint, weight paint and edit.

I'm on Windows.and tested 2.83 and 2.90 (last master code). Try the attached file... I just open it and save.

startup_saved.blend

@Meru I can open your startup file, add a GPencil and draw, sculpt, vertex paint, weight paint and edit. I'm on Windows.and tested 2.83 and 2.90 (last master code). Try the attached file... I just open it and save. [startup_saved.blend](https://archive.blender.org/developer/F8640755/startup_saved.blend)

Same crash with the file you attached. blender.crash.txt

I can open the file just fine, it just fails as a startup.blender from a template, Windows or Linux.
https://docs.blender.org/manual/en/dev/advanced/app_templates.html

Same crash with the file you attached. [blender.crash.txt](https://archive.blender.org/developer/F8640973/blender.crash.txt) I can open the file just fine, it just fails as a startup.blender from a template, Windows or Linux. https://docs.blender.org/manual/en/dev/advanced/app_templates.html

I gave it some more testing. Seems like adding and removing a GPencil object fixes the file.

I gave it some more testing. Seems like adding and removing a GPencil object fixes the file.

This issue came back to haunt me once again.

This time, adding and removing a new grease pencil object doesn't fix it. Happens on Windows or Linux regardless.

Similar steps to reproduce:
Heavypoly.zip

  Download latest beta build from https://builder.blender.org/download/
  Unzip Blender somewhere
  Unzip Heavypoly.zip into {Blender_install}\2.90\scripts\startup\bl_app_templates_system\
  Run Blender with: blender --app-template Heavypoly
  Experience crash

Same crash:
blender.crash.txt

This issue came back to haunt me once again. This time, adding and removing a new grease pencil object doesn't fix it. Happens on Windows or Linux regardless. Similar steps to reproduce: [Heavypoly.zip](https://archive.blender.org/developer/F9579537/Heavypoly.zip) ``` Download latest beta build from https://builder.blender.org/download/ Unzip Blender somewhere Unzip Heavypoly.zip into {Blender_install}\2.90\scripts\startup\bl_app_templates_system\ Run Blender with: blender --app-template Heavypoly Experience crash ``` Same crash: [blender.crash.txt](https://archive.blender.org/developer/F9579544/blender.crash.txt)

startup.blend

Another reproducible crash

  Load the startup.blend (no need to replace your own startup)
  Select Grease Pencil and switch to Draw mode
  Draw
  Undo
  Crash

blender.crash.txt

[startup.blend](https://archive.blender.org/developer/F9579986/startup.blend) Another reproducible crash ``` Load the startup.blend (no need to replace your own startup) Select Grease Pencil and switch to Draw mode Draw Undo Crash ``` [blender.crash.txt](https://archive.blender.org/developer/F9579987/blender.crash.txt)

Fixed the issue by opening startup.blend, entering GP weight paint mode, clicking on reset brush and saving.

Fixed the issue by opening startup.blend, entering GP weight paint mode, clicking on reset brush and saving.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77003
No description provided.