Fix T77003: GPencil Paint presets not initializated

In som ecases, the Paint was not ready when the brushes and palette were created. Now, first the paint is checked.